# DecadeClassificationofSongLyrics_NLP

./: .gitignore  README.md  gitignore.txt  pyproject.toml  requirements.txt
notebooks/: model_LlaMA.ipynb  model_bert.ipynb  model_logreg.ipynb  model_lstm.ipynb  model_randomforest.ipynb
reports/: classreport_bert_unprocessed.csv  classreport_logreg_processed.csv  classreport_logreg_unprocessed.csv  classreport_lstm_unprocessed.csv  classreport_random_forest_processed.csv  classreport_random_forest_unprocessed.csv  trainingstats_bert.csv  trainingstats_lstm.csv  trainingsummary_lstm.csv
src/: evaluate.py
src/data/: data.py
src/data/dataloaders/: bert_loader.py  llama_loader.py  logreg_loader.py  lstm_loader.py  randomforest_loader.py
src/models/: bert.py  llama.py  lstm.py
src/train/: bert_trainer.py  lstm_trainer.py
src/utils/: utils_eda.py  utils_nlp.py
