[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "decade_prediction_song_lyrics"
version = "1.0.0"
description = "Predicting song release decades using NLP techniques with traditional ML models and LLMs"
authors = [
  { name = "Elena Del Governatore", email = "eledelgo@gmail.com" },
]

keywords = ["NLP", "machine learning", "MLOps", "song lyrics", "decade prediction"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Researchers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.ruff]
line-length = 120
exclude = ["myenv", "data", "notebooks", "__pycache__"]

[tool.ruff.lint]
select = ["I", "N", "E", "W", "F", "C90"]
ignore = ["E501"]

[tool.coverage.run]
omit = ["tests/*", "myenv/*", "data/*", "documents/*"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=3 --disable-warnings"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.isort]
profile = "black"
known_first_party = ["src"]

